// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App application 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <button
      class="btn btn-secondary"
      data-testid="item-add"
      type="button"
    >
      add
    </button>
  </div>
</DocumentFragment>
`;

exports[`App application 2 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <button
      class="btn btn-secondary"
      data-testid="item-add"
      type="button"
    >
      add
    </button>
  </div>
</DocumentFragment>
`;

exports[`App application 2 2`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <button
      class="btn btn-secondary"
      data-testid="item-add"
      type="button"
    >
      add
    </button>
  </div>
  <div>
    <span
      class="mr-3"
    >
      first task!
    </span>
    <button
      class="border-0 btn-link mr-3 p-0"
      data-testid="item-rename"
      type="button"
    >
      rename
    </button>
    <button
      class="border-0 btn-link p-0"
      data-testid="item-remove"
      type="button"
    >
      remove
    </button>
  </div>
</DocumentFragment>
`;

exports[`App application 2 3`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <button
      class="btn btn-secondary"
      data-testid="item-add"
      type="button"
    >
      add
    </button>
  </div>
  <div>
    <span
      class="mr-3"
    >
      changed name!
    </span>
    <button
      class="border-0 btn-link mr-3 p-0"
      data-testid="item-rename"
      type="button"
    >
      rename
    </button>
    <button
      class="border-0 btn-link p-0"
      data-testid="item-remove"
      type="button"
    >
      remove
    </button>
  </div>
</DocumentFragment>
`;

exports[`App application 2 4`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <button
      class="btn btn-secondary"
      data-testid="item-add"
      type="button"
    >
      add
    </button>
  </div>
</DocumentFragment>
`;
